samples/_failures_safe/1761314356_fb5bf9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7f593c34.c: In function ‘tokenize’:
./samples/SAFE/__tmp_7f593c34.c:151:13: error: expected declaration or statement at end of input
  151 |             advance = 1;
      |             ^~~~~~~
./samples/SAFE/__tmp_7f593c34.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7f593c34.c:151:13: error: expected declaration or statement at end of input
